--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,15 @@
 <body>
     <div class="wrap">
         <header>
-          头部
+            <div class="search">
+                   <input type="text" class="ipt">
+                   <button class="btn">搜索</button>
+            </div>
         </header>
         <section>
-
+             <div class="list">
+                
+             </div>
         </section>
     </div>
     <script src="./js/libs/flexible.js"></script>
